# trainings

./: .gitignore  CMakeLists.txt  README.md  SandBox.sln  Trainings.sln
.workspace/.metadata/.plugins/org.eclipse.core.resources/: 10.snap  19.snap
.workspace/.metadata/.plugins/org.eclipse.core.resources/.projects/AndroidAnt/: .markers  .markers.snap  1.tree
.workspace/.metadata/.plugins/org.eclipse.core.resources/.projects/AndroidAnt/.indexes/af/: history.index
.workspace/.metadata/.plugins/org.eclipse.core.resources/.projects/RealWorldMario/: .markers  .markers.snap  1.tree
.workspace/.metadata/.plugins/org.eclipse.core.resources/.projects/_JavaProjectTemplate/: 1.tree  2.tree
.workspace/.metadata/.plugins/org.eclipse.core.resources/.root/: 10.tree  19.tree
.workspace/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.workspace/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.workspace/.metadata/.plugins/org.eclipse.jdt.core/: 3566550567.index  3609623544.index  assumedExternalFilesCache  externalLibsTimeStamps  nonChainingJarsCache  savedIndexNames.txt
.workspace/AndroidAnt/: .project
.workspace/RealWorldMario/: .project
AndroidAnt/: AndroidAnt.androidproj  AndroidManifest.xml
AndroidAnt/res/values/: strings.xml
AndroidAnt/src/com/AndroidAnt/: AndroidAnt.java
AndroidGradle/: AndroidGradle.androidproj
AndroidGradle/app/src/main/: AndroidManifest.xml.template
AndroidGradle/app/src/main/java/com/AndroidGradle/: AndroidGradle.java
AndroidGradle/app/src/main/res/values/: strings.xml
BoostNewTest/: BoostNewTest.vcxproj  Test.cpp
BoostTest/: BoostTest.vcxproj  test.cpp
C++17/: C++17.vcxproj  C++17.vcxproj.filters  CMakeLists.txt  Exceptions.cpp  Exceptions.h  basicclasses.cpp  basicclasses.h  c++.cpp  c++.h  friendshipandinheritance.cpp  friendshipandinheritance.h  main.cpp  typecasting.cpp  typecasting.h
CMake/: main_new.cpp
CMakePR/: CMakeLists.txt
CMakeProject/: CMakeProject.cpp  CMakeProjectConfig.h  CMakeProjectConfig.h.in
CMaketrainings/hello/: CMakeLists.txt  main.cpp
CUDA/: CMakeLists.txt  README.md  main.cpp  particle.cu  randomize.cpp
CUDA_Project/: CUDA_Project.vcxproj
Compiling/: CMakeLists.txt  ReadMe.md  a.cpp  a.hpp  b.cpp  main_expanded.c  main_expanded.s
EulerProject/: CMakeLists.txt  EulerPRoject.vcxproj.filters  EulerProject.vcxproj  TheEulerProject.cpp  main.cpp  theEulerProject.h  theprojecteuler.nb
EulerRunner/: CMakeLists.txt  EulerRunner.vcxproj  EulerRunner.vcxproj.filters  main.cpp
Eulerproject/: EulerProject.vcxproj.filters
GMSH/: ExtrudeWire.geo  README.md  coolingPlateSpipe.geo
Golang/: hello.go
Mathematica/: GifGeneration.nb  Todoist.nb  aliasing.nb
Modelica/: Color.mo  FirstModel.mo  MoonLanding.mo  ReadMe.md
Modelica/SimpleHome/: SimpleHomeAndEnvironment.mo
Modelica/Tutorial/: Body.mo  CelestialBody.mo  ColorData.mo  FirstModel.xml  HelloWorld.mo  PolynomialEvaluator.mo  SimpleRocketModel.mo  Sum.mo
OpenCV/: CMakeLists.txt  Camera.cpp  DisplayImage.cpp  OpenCV.ipynb  OpenCV.vcxproj  Open_CV.vcxproj  PlayVideo.cpp  README.md
OpenGL/: CMakeLists.txt  OpenGL.vcxproj  OpenGL.vcxproj.filters  glew_and_freeglut.h  glfw_test.cpp
OpenGLC/: CMakeLists.txt  README.md  main.cpp
Open_CV/: Camera.cpp  Main.cpp  Open_CV.vcxproj  Open_CV.vcxproj.filters
Open_GL/: Main.cpp  Open_GL.vcxproj  Open_GL.vcxproj.filters  glew_and_freeglut.cpp  glfw_test.cpp  glfw_test.h
Patterns/: Creational.cpp  Creational.h  Patterns.vcxproj  Patterns.vcxproj.filters  main.cpp
PipesInOctave/: AnalyticSolution.nb  ReadMe.md  SimpleHydraulicSystemSimulation.m  Task.mo  main.m
PythonPR/: Matplotlib.ipynb  PythonPR.pyproj  PythonScientificLibraries.ipynb  raytracing.py
PythonPR/PythonLanguage/: PythonTutorial1.ipynb
RealWorldMario/: AndroidManifest.xml  RealWorldMario.androidproj
RealWorldMario/res/values/: strings.xml
RealWorldMario/src/com/RealWorldMario/: RealWorldMario.java
STLBook/: CMakeLists.txt  STLBook.vcxproj  main.cpp  stl_code.cpp  stl_code.h
STL_Book/: STL_Book.vcxproj  STL_Book.vcxproj.filters  main.cpp  stl_code.cpp  stl_code.h
Trainings/: CMakeLists.txt  TheEulerProject.cpp  Trainings.vcxproj  Trainings.vcxproj.filters  main.cpp  stl_experience.cpp  stl_experience.h  theEulerProject.h  theprojecteuler.nb
UnitTest1/: UnitTest1.vcxproj  unittest1.cpp
UnitTests/: CMakeLists.txt  UnitTests.vcxproj  eulerproject.cpp  stdafx.cpp  stdafx.h  targetver.h  unittest1.cpp
box2d/: CMakeLists.txt  box2d.vcxproj  main.cpp
cs50/: caesar_cipher.cpp  cash.c  credit.c
dealii/: CMakeLists.txt  ReadMe.md  main.cpp  step-1-2.cpp  step-1-2.hpp  step-1-main.cpp  step-1.cpp  step-1.hpp  step-2-main.cpp  step-2.cpp  step-2.hpp  step-3-main.cpp  step-3.cpp  step-3.hpp  step-6.cpp  step-6.hpp  steps.cpp
prometeus_cs/: ReadMe.md  caesar  caesar.s  cash  crack.c  credit  main.s  mario  mario.c  mario1.c  questions.md  recover.c  resize.c  vigenere.cpp  whodunit.c
some_course/week6/: caesar.py  cash.py  credit.py  hello.py  mario.py  mario_adv.py
web/: README.md
web/test-web-page/: basic-structure.html  captcha-test.html  form.html  index.html  some-new.html  title.html
web/test-web-page/scripts/: main.js
web/test-web-page/styles/: style.css
